Code studies 05/03/2020 R studio completed

--- a/Python/Complete Puthon 3 Boot Camp/Note Books/Complete-Python-3-Bootcamp-master/00-Python Object and Data Structure Basics/08-Files.ipynb
+++ b/Python/Complete Puthon 3 Boot Camp/Note Books/Complete-Python-3-Bootcamp-master/00-Python Object and Data Structure Basics/08-Files.ipynb
@@ -108,10 +108,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 1,
+   "metadata": {},
    "outputs": [],
    "source": [
     "# Open the text.txt we made earlier\n",
@@ -120,16 +118,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'Hello, this is a quick test file.'"
+       "'First Line\\nSecond Line'"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -138,6 +143,13 @@
     "# We can now read the file\n",
     "my_file.read()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
