Python milestone project 1 complete 11/04/2020

--- a/Python/Complete Puthon 3 Boot Camp/Note Books/Complete-Python-3-Bootcamp-master/02-Python Statements/07-Statements Assessment Test.ipynb
+++ b/Python/Complete Puthon 3 Boot Camp/Note Books/Complete-Python-3-Bootcamp-master/02-Python Statements/07-Statements Assessment Test.ipynb
@@ -6,7 +6,7 @@
     "collapsed": true
    },
    "source": [
-    "# \n",
+    "# Statements Assessment Test\n",
     "Let's test your knowledge!"
    ]
   },
@@ -164,7 +164,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.3"
+   "version": "3.6.2"
   }
  },
  "nbformat": 4,
