--- a/Python/Complete Puthon 3 Boot Camp/Note Books/Complete-Python-3-Bootcamp-master/04-Milestone Project - 1/03-Milestone Project 1 - Complete Walkthrough Solution.ipynb
+++ b/Python/Complete Puthon 3 Boot Camp/Note Books/Complete-Python-3-Bootcamp-master/04-Milestone Project - 1/03-Milestone Project 1 - Complete Walkthrough Solution.ipynb
@@ -206,7 +206,18 @@
     "collapsed": true
    },
    "outputs": [],
-   "source": []
+   "source": [
+    "def win_check(board,mark):\n",
+    "    \n",
+    "    return ((board[7] == mark and board[8] == mark and board[9] == mark) or # across the top\n",
+    "    (board[4] == mark and board[5] == mark and board[6] == mark) or # across the middle\n",
+    "    (board[1] == mark and board[2] == mark and board[3] == mark) or # across the bottom\n",
+    "    (board[7] == mark and board[4] == mark and board[1] == mark) or # down the middle\n",
+    "    (board[8] == mark and board[5] == mark and board[2] == mark) or # down the middle\n",
+    "    (board[9] == mark and board[6] == mark and board[3] == mark) or # down the right side\n",
+    "    (board[7] == mark and board[5] == mark and board[3] == mark) or # diagonal\n",
+    "    (board[9] == mark and board[5] == mark and board[1] == mark)) # diagonal"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -356,26 +367,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "   |   |\n",
-      "   | O | O\n",
-      "   |   |\n",
-      "-----------\n",
-      "   |   |\n",
-      "   |   |  \n",
-      "   |   |\n",
-      "-----------\n",
-      "   |   |\n",
-      " X | X | X\n",
-      "   |   |\n",
-      "Congratulations! You have won the game!\n",
-      "Do you want to play again? Enter Yes or No: No\n"
+      "Welcome to Tic Tac Toe!\n"
+     ]
+    },
+    {
+     "ename": "NameError",
+     "evalue": "name 'player_input' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[1;32m<ipython-input-1-6c79884158f8>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m      4\u001b[0m     \u001b[1;31m# Reset the board\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      5\u001b[0m     \u001b[0mtheBoard\u001b[0m \u001b[1;33m=\u001b[0m \u001b[1;33m[\u001b[0m\u001b[1;34m' '\u001b[0m\u001b[1;33m]\u001b[0m \u001b[1;33m*\u001b[0m \u001b[1;36m10\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 6\u001b[1;33m     \u001b[0mplayer1_marker\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mplayer2_marker\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mplayer_input\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m      7\u001b[0m     \u001b[0mturn\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mchoose_first\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      8\u001b[0m     \u001b[0mprint\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mturn\u001b[0m \u001b[1;33m+\u001b[0m \u001b[1;34m' will go first.'\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;31mNameError\u001b[0m: name 'player_input' is not defined"
      ]
     }
    ],
@@ -438,6 +448,13 @@
     "    if not replay():\n",
     "        break"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "markdown",
