--- a/Python/PlayPython/Untitled.ipynb
+++ b/Python/PlayPython/Untitled.ipynb
@@ -2,152 +2,123 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 101,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
-    "import numpy as np\n",
-    "import pandas as pd\n",
-    "import math as m"
+    "import pandas as pd"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 102,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "df = pd.DataFrame(pd.read_excel('PlayPython.xlsx'))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 103,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>x</th>\n",
-       "      <th>y</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>3</td>\n",
-       "      <td>12</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>5</td>\n",
-       "      <td>20</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>7</td>\n",
-       "      <td>28</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>9</td>\n",
-       "      <td>36</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>11</td>\n",
-       "      <td>44</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "    x   y\n",
-       "0   3  12\n",
-       "1   5  20\n",
-       "2   7  28\n",
-       "3   9  36\n",
-       "4  11  44"
-      ]
-     },
-     "execution_count": 103,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "df.head()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 105,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def time2(x):\n",
-    "    if x >=9:\n",
-    "        return x ** 4\n",
-    "    else:\n",
-    "        return x * 2"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 113,
-   "metadata": {},
-   "outputs": [
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "Oracle DB connection initialized\n",
+      "\n"
+     ]
+    },
     {
-     "data": {
-      "text/plain": [
-       "0                                                     6\n",
-       "1                                                    10\n",
-       "2                                                    14\n",
-       "3                                                  6561\n",
-       "4                                                 14641\n",
-       "5                                                 28561\n",
-       "6                                                 50625\n",
-       "7                                                 83521\n",
-       "8                                                130321\n",
-       "9                                                194481\n",
-       "10                                               279841\n",
-       "11                                               390625\n",
-       "12                                               531441\n",
-       "x     0          5\n",
-       "1          9\n",
-       "2         13\n",
-       "3      ...\n",
-       "Name: x, dtype: object"
-      ]
-     },
-     "execution_count": 113,
-     "metadata": {},
-     "output_type": "execute_result"
+     "ename": "TypeError",
+     "evalue": "'int' object is not iterable",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[1;32m<ipython-input-10-4e8e340a2a04>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m     79\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     80\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 81\u001b[1;33m \u001b[0mmain\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[1;32m<ipython-input-10-4e8e340a2a04>\u001b[0m in \u001b[0;36mmain\u001b[1;34m()\u001b[0m\n\u001b[0;32m     75\u001b[0m                               and password is not null\"\"\" )\n\u001b[0;32m     76\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 77\u001b[1;33m     \u001b[0mdisplaySQLresults\u001b[0m\u001b[1;33m(\u001b[0m \u001b[0mdf\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;36m0\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;36m0\u001b[0m\u001b[1;33m]\u001b[0m \u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m     78\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     79\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;32m<ipython-input-10-4e8e340a2a04>\u001b[0m in \u001b[0;36mdisplaySQLresults\u001b[1;34m(results)\u001b[0m\n\u001b[0;32m     51\u001b[0m \u001b[1;32mdef\u001b[0m \u001b[0mdisplaySQLresults\u001b[0m\u001b[1;33m(\u001b[0m \u001b[0mresults\u001b[0m \u001b[1;33m)\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     52\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 53\u001b[1;33m     \u001b[1;32mfor\u001b[0m \u001b[0mrow\u001b[0m \u001b[1;32min\u001b[0m \u001b[0mresults\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m     54\u001b[0m         \u001b[0mprint\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m\"{}\\n\"\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mformat\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mrow\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     55\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;31mTypeError\u001b[0m: 'int' object is not iterable"
+     ]
     }
    ],
    "source": [
-    "df2= df['x'].apply(time2)\n",
-    "df2['x']= df['x'].apply(time2)-1\n",
-    "df2"
+    "# -*- coding: utf-8 -*-\n",
+    "\"\"\"\n",
+    "Spyder Editor\n",
+    "\n",
+    "Author: Arno Combrinck\n",
+    "Date:   2019-07-27\n",
+    "\"\"\"\n",
+    "\n",
+    "# Symbolic link from /usr/lib64/libnsl.so.2.0.0 to /usr/lib64/libnsl.so.1 required\n",
+    "\n",
+    "from __future__ import print_function\n",
+    "\n",
+    "import traceback\n",
+    "import os\n",
+    "os.chdir(\"C:\\\\Oracle\\\\instantclient_19_3\")\n",
+    "\n",
+    "import cx_Oracle\n",
+    "import sys\n",
+    "\n",
+    "def connectToOracleDB():\n",
+    "    \n",
+    "    global connection\n",
+    "    global cursor\n",
+    "    global username\n",
+    "    global password\n",
+    "    global host\n",
+    "    global service\n",
+    "    \n",
+    "    try:\n",
+    "        \n",
+    "        connection = cx_Oracle.connect(username, password, host+\"/\"+service)\n",
+    "        \n",
+    "        cursor = connection.cursor()\n",
+    "        \n",
+    "        print(\"\\nOracle DB connection initialized\\n\")\n",
+    "        \n",
+    "    except Exception as err:\n",
+    "        exc_type, exc_value, exc_tb = sys.exc_info()\n",
+    "        traceback.print_exception(exc_type, exc_value, exc_tb)\n",
+    "        print(\"\\n{}\\n\".format(err))\n",
+    "        exit()\n",
+    "           \n",
+    "def executeSQLquery( sql ):\n",
+    "    \n",
+    "    global cursor\n",
+    "    \n",
+    "    cursor.execute( sql )\n",
+    "    \n",
+    "    return cursor.fetchall()\n",
+    "\n",
+    "def displaySQLresults( results ):\n",
+    "\n",
+    "    for row in results:\n",
+    "        print(\"{}\\n\".format(row))\n",
+    "\n",
+    "def main():\n",
+    "    global connection\n",
+    "    global cursor\n",
+    "    global username\n",
+    "    global password\n",
+    "    global host\n",
+    "    global service\n",
+    "    \n",
+    "    connection = 0\n",
+    "    cursor = 0\n",
+    "    username = \"PECUTILOTST\"\n",
+    "    password = \"PECUTILOTST\"\n",
+    "    host = \"dboratst.spsi.co.za\"\n",
+    "    service = \"tst\"\n",
+    "    \n",
+    "    connectToOracleDB()\n",
+    "    \n",
+    "    df =pd.DataFrame = executeSQLquery( \"\"\"SELECT * FROM ad_user \n",
+    "                              where name like '%Raymond%'\n",
+    "                              and password is not null\"\"\" )\n",
+    "    \n",
+    "    displaySQLresults( df[0][0] )\n",
+    "    \n",
+    "    \n",
+    "    \n",
+    "main() "
    ]
   }
  ],
