--- a/Python/PlayPython/Logbook summary/Logbook summary example.ipynb
+++ b/Python/PlayPython/Logbook summary/Logbook summary example.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -29,7 +29,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "metadata": {
     "scrolled": false
    },
@@ -50,7 +50,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -101,7 +101,15 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Sumarize from a start date : yes\n"
+     ]
+    }
+   ],
    "source": [
     "partial_sum = input('Sumarize from a start date : ')\n",
     "if partial_sum.lower() =='no':\n",
