--- a/Python/Python for Data Science and Machine Learning Bootcamp/Course work/Section 20 Support Vector Machines/Video 105 Support Vector Machines.ipynb
+++ b/Python/Python for Data Science and Machine Learning Bootcamp/Course work/Section 20 Support Vector Machines/Video 105 Support Vector Machines.ipynb
@@ -363,7 +363,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -372,18 +372,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Fitting 3 folds for each of 25 candidates, totalling 75 fits\n",
-      "[CV] C=0.1, gamma=1 ..................................................\n",
-      "[CV] .......... C=0.1, gamma=1, score=0.631578947368421, total=   0.0s"
-     ]
-    },
     {
      "name": "stderr",
      "output_type": "stream",
@@ -391,26 +382,7 @@
       "C:\\Users\\raymondk\\AppData\\Local\\Continuum\\anaconda3\\lib\\site-packages\\sklearn\\model_selection\\_split.py:2053: FutureWarning: You should specify a value for 'cv' instead of relying on the default value. The default value will change from 3 to 5 in version 0.22.\n",
       "  warnings.warn(CV_WARNING, FutureWarning)\n",
       "[Parallel(n_jobs=1)]: Using backend SequentialBackend with 1 concurrent workers.\n",
-      "[Parallel(n_jobs=1)]: Done   1 out of   1 | elapsed:    0.0s remaining:    0.0s\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\n",
-      "[CV] C=0.1, gamma=1 ..................................................\n",
-      "[CV] .......... C=0.1, gamma=1, score=0.631578947368421, total=   0.0s\n",
-      "[CV] C=0.1, gamma=1 ..................................................\n",
-      "[CV] ......... C=0.1, gamma=1, score=0.6363636363636364, total=   0.0s\n",
-      "[CV] C=0.1, gamma=0.1 ................................................\n",
-      "[CV] ........ C=0.1, gamma=0.1, score=0.631578947368421, total=   0.0s"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
+      "[Parallel(n_jobs=1)]: Done   1 out of   1 | elapsed:    0.0s remaining:    0.0s\n",
       "[Parallel(n_jobs=1)]: Done   2 out of   2 | elapsed:    0.0s remaining:    0.0s\n"
      ]
     },
@@ -418,7 +390,15 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "\n",
+      "Fitting 3 folds for each of 25 candidates, totalling 75 fits\n",
+      "[CV] C=0.1, gamma=1 ..................................................\n",
+      "[CV] .......... C=0.1, gamma=1, score=0.631578947368421, total=   0.0s\n",
+      "[CV] C=0.1, gamma=1 ..................................................\n",
+      "[CV] .......... C=0.1, gamma=1, score=0.631578947368421, total=   0.0s\n",
+      "[CV] C=0.1, gamma=1 ..................................................\n",
+      "[CV] ......... C=0.1, gamma=1, score=0.6363636363636364, total=   0.0s\n",
+      "[CV] C=0.1, gamma=0.1 ................................................\n",
+      "[CV] ........ C=0.1, gamma=0.1, score=0.631578947368421, total=   0.0s\n",
       "[CV] C=0.1, gamma=0.1 ................................................\n",
       "[CV] ........ C=0.1, gamma=0.1, score=0.631578947368421, total=   0.0s\n",
       "[CV] C=0.1, gamma=0.1 ................................................\n",
@@ -527,7 +507,13 @@
       "[CV] ..... C=100, gamma=0.001, score=0.9166666666666666, total=   0.0s\n",
       "[CV] C=100, gamma=0.0001 .............................................\n",
       "[CV] .... C=100, gamma=0.0001, score=0.9172932330827067, total=   0.0s\n",
-      "[CV] C=100, gamma=0.0001 .............................................\n",
+      "[CV] C=100, gamma=0.0001 .............................................\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
       "[CV] .... C=100, gamma=0.0001, score=0.9774436090225563, total=   0.0s\n",
       "[CV] C=100, gamma=0.0001 .............................................\n",
       "[CV] .... C=100, gamma=0.0001, score=0.9393939393939394, total=   0.0s\n",
@@ -535,13 +521,7 @@
       "[CV] ......... C=1000, gamma=1, score=0.631578947368421, total=   0.0s\n",
       "[CV] C=1000, gamma=1 .................................................\n",
       "[CV] ......... C=1000, gamma=1, score=0.631578947368421, total=   0.0s\n",
-      "[CV] C=1000, gamma=1 .................................................\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "[CV] C=1000, gamma=1 .................................................\n",
       "[CV] ........ C=1000, gamma=1, score=0.6363636363636364, total=   0.0s\n",
       "[CV] C=1000, gamma=0.1 ...............................................\n",
       "[CV] ....... C=1000, gamma=0.1, score=0.631578947368421, total=   0.0s\n",
@@ -573,7 +553,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "[Parallel(n_jobs=1)]: Done  75 out of  75 | elapsed:    3.7s finished\n"
+      "[Parallel(n_jobs=1)]: Done  75 out of  75 | elapsed:    2.3s finished\n"
      ]
     },
     {
@@ -590,7 +570,7 @@
        "       scoring=None, verbose=3)"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 32,
      "metadata": {},
      "output_type": "execute_result"
     }
