Code studies oct 2020

--- a/Python/PlayPython/Logbook summary/Logbook summary example.ipynb
+++ b/Python/PlayPython/Logbook summary/Logbook summary example.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -29,7 +29,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 36,
    "metadata": {
     "scrolled": false
    },
@@ -50,7 +50,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -64,7 +64,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -81,7 +81,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -99,14 +99,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Sumarize from a start date : yes\n"
+      "Sumarize from a start date : no\n"
      ]
     }
    ],
@@ -129,7 +129,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -146,7 +146,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -163,7 +163,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -182,7 +182,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -192,7 +192,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -206,7 +206,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -224,9 +224,212 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 47,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>INSTRUMENTS ACTUAL</th>\n",
+       "      <th>INSTRUMENTS FSTD</th>\n",
+       "      <th>FSTD</th>\n",
+       "      <th>SINGLE DAY DUAL</th>\n",
+       "      <th>SINGLE DAY PIC</th>\n",
+       "      <th>SINGLE NIGHT DUAL</th>\n",
+       "      <th>SINGLE NIGHT PIC</th>\n",
+       "      <th>DATE LAST FLOWN</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>TYPE</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>C 150</th>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>6.5</td>\n",
+       "      <td>0.6</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>2020-07-23</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>C 172</th>\n",
+       "      <td>5.9</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>6.8</td>\n",
+       "      <td>25.2</td>\n",
+       "      <td>12.2</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>2019-03-16</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>C 210</th>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1.5</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>2015-02-05</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>C 210 T</th>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>2017-11-14</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>FRASCA</th>\n",
+       "      <td>0.0</td>\n",
+       "      <td>5.0</td>\n",
+       "      <td>5.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>2014-07-19</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>P 28 A 140</th>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>2.6</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>2018-06-23</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>P 28 A 180</th>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1.6</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>2017-02-16</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>P28 A 160</th>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>51.3</td>\n",
+       "      <td>15.9</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>2014-07-22</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>PA 28 R 180</th>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>2014-12-04</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>X 297</th>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>6.4</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>2018-05-26</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "             INSTRUMENTS ACTUAL  INSTRUMENTS FSTD  FSTD  SINGLE DAY DUAL   \\\n",
+       "TYPE                                                                        \n",
+       "C 150                       0.0               0.0   0.0               6.5   \n",
+       "C 172                       5.9               0.0   0.0               6.8   \n",
+       "C 210                       0.0               0.0   0.0               1.5   \n",
+       "C 210 T                     0.0               0.0   0.0               2.0   \n",
+       "FRASCA                      0.0               5.0   5.0               0.0   \n",
+       "P 28 A 140                  0.0               0.0   0.0               0.0   \n",
+       "P 28 A 180                  0.0               0.0   0.0               0.0   \n",
+       "P28 A 160                   0.0               0.0   0.0              51.3   \n",
+       "PA 28 R 180                 0.0               0.0   0.0               1.0   \n",
+       "X 297                       0.0               0.0   0.0               2.0   \n",
+       "\n",
+       "             SINGLE DAY PIC  SINGLE NIGHT DUAL   SINGLE NIGHT PIC   \\\n",
+       "TYPE                                                                 \n",
+       "C 150                   0.6                 0.0                0.0   \n",
+       "C 172                  25.2                12.2                1.0   \n",
+       "C 210                   0.0                 0.0                0.0   \n",
+       "C 210 T                 0.0                 0.0                0.0   \n",
+       "FRASCA                  0.0                 0.0                0.0   \n",
+       "P 28 A 140              2.6                 0.0                0.0   \n",
+       "P 28 A 180              1.6                 0.0                0.0   \n",
+       "P28 A 160              15.9                 0.0                0.0   \n",
+       "PA 28 R 180             1.0                 0.0                0.0   \n",
+       "X 297                   6.4                 0.0                0.0   \n",
+       "\n",
+       "            DATE LAST FLOWN  \n",
+       "TYPE                         \n",
+       "C 150            2020-07-23  \n",
+       "C 172            2019-03-16  \n",
+       "C 210            2015-02-05  \n",
+       "C 210 T          2017-11-14  \n",
+       "FRASCA           2014-07-19  \n",
+       "P 28 A 140       2018-06-23  \n",
+       "P 28 A 180       2017-02-16  \n",
+       "P28 A 160        2014-07-22  \n",
+       "PA 28 R 180      2014-12-04  \n",
+       "X 297            2018-05-26  "
+      ]
+     },
+     "execution_count": 47,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "Summary_Final = summary.drop(scolD,axis=1)\n",
     "Summary_Final.to_excel('sum.xlsx')\n",
@@ -235,9 +438,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 48,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Done\n"
+     ]
+    }
+   ],
    "source": [
     "print('Done')"
    ]
