--- a/Python/PlayPython/Skool VS Koshuis/Skool VS Koshuis.ipynb
+++ b/Python/PlayPython/Skool VS Koshuis/Skool VS Koshuis.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -27,7 +27,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -37,7 +37,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -47,7 +47,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -64,7 +64,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -81,7 +81,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -99,7 +99,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -109,7 +109,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -123,7 +123,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -133,7 +133,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -146,7 +146,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -157,12 +157,133 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [],
    "source": [
     "Final=calc[(calc['GR']!=12) & (calc['IN HOSTAL']==False)]\n",
     "Final.to_excel('C:\\\\Users\\\\raymondk\\\\Desktop\\\\Study\\\\Python\\\\PlayPython\\\\Skool VS Koshuis\\\\Output\\\\Final_Filterd.xlsx',sheet_name='Filterd',index=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>FAM CODE</th>\n",
+       "      <th>NAME</th>\n",
+       "      <th>GR</th>\n",
+       "      <th>IN HOSTAL</th>\n",
+       "      <th>KOS AMOUNT</th>\n",
+       "      <th>BASE AMOUNT</th>\n",
+       "      <th>INITIAL AMOUNT</th>\n",
+       "      <th>TOTAL</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>K1</td>\n",
+       "      <td>Kind 1</td>\n",
+       "      <td>8</td>\n",
+       "      <td>False</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>600</td>\n",
+       "      <td>360</td>\n",
+       "      <td>960.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>K4</td>\n",
+       "      <td>Kind 4</td>\n",
+       "      <td>8</td>\n",
+       "      <td>False</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>600</td>\n",
+       "      <td>360</td>\n",
+       "      <td>960.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>K5</td>\n",
+       "      <td>Kind 5</td>\n",
+       "      <td>8</td>\n",
+       "      <td>False</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>600</td>\n",
+       "      <td>360</td>\n",
+       "      <td>960.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>K7</td>\n",
+       "      <td>Kind 7</td>\n",
+       "      <td>9</td>\n",
+       "      <td>False</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>600</td>\n",
+       "      <td>0</td>\n",
+       "      <td>600.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9</th>\n",
+       "      <td>K9</td>\n",
+       "      <td>Kind 9</td>\n",
+       "      <td>9</td>\n",
+       "      <td>False</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>600</td>\n",
+       "      <td>0</td>\n",
+       "      <td>600.0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "  FAM CODE    NAME  GR  IN HOSTAL  KOS AMOUNT  BASE AMOUNT  INITIAL AMOUNT  \\\n",
+       "0       K1  Kind 1   8      False         0.0          600             360   \n",
+       "4       K4  Kind 4   8      False         0.0          600             360   \n",
+       "5       K5  Kind 5   8      False         0.0          600             360   \n",
+       "7       K7  Kind 7   9      False         0.0          600               0   \n",
+       "9       K9  Kind 9   9      False         0.0          600               0   \n",
+       "\n",
+       "   TOTAL  \n",
+       "0  960.0  \n",
+       "4  960.0  \n",
+       "5  960.0  \n",
+       "7  600.0  \n",
+       "9  600.0  "
+      ]
+     },
+     "execution_count": 33,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "Final.head()"
    ]
   },
   {
@@ -174,7 +295,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -183,7 +304,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
@@ -191,8 +312,8 @@
      "output_type": "stream",
      "text": [
       "Code Completed\n",
-      "Date:2020/8/20 \n",
-      "Time:12:29:55\n",
+      "Date:2020/10/27 \n",
+      "Time:19:55:57\n",
       "Output Files Created\n",
       "Location :C:\\Users\\raymondk\\Desktop\\Study\\Python\\PlayPython\\Skool VS Koshuis\\Output\n"
      ]
