code studies commit 24/11/2020

--- a/Python/Complete Puthon 3 Boot Camp/GUI/Widget Styling and layouts.ipynb
+++ b/Python/Complete Puthon 3 Boot Camp/GUI/Widget Styling and layouts.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -12,13 +12,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "12c8e47be45a4d70a11746064a797efb",
+       "model_id": "",
        "version_major": 2,
        "version_minor": 0
       },
@@ -37,7 +37,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -48,13 +48,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "7826d4b2ccd044008e6ca28346cd58a3",
+       "model_id": "",
        "version_major": 2,
        "version_minor": 0
       },
@@ -75,13 +75,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "8367a2d13b7c43868a3cff6d8aecbf07",
+       "model_id": "",
        "version_major": 2,
        "version_minor": 0
       },
@@ -100,13 +100,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "12aa9cfb02684b159ca66d4842dc9cbd",
+       "model_id": "",
        "version_major": 2,
        "version_minor": 0
       },
@@ -127,7 +127,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -144,7 +144,7 @@
        " 'font_weight']"
       ]
      },
-     "execution_count": 28,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -156,13 +156,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "4b30c224ec8b49aba971a56f9a9d6266",
+       "model_id": "",
        "version_major": 2,
        "version_minor": 0
       },
