--- a/Python/Complete Puthon 3 Boot Camp/GUI/Interact Functionality with GUI's video 105.ipynb
+++ b/Python/Complete Puthon 3 Boot Camp/GUI/Interact Functionality with GUI's video 105.ipynb
@@ -42,7 +42,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "459a49c172994a2dbd4298e44e3cfb95",
+       "model_id": "",
        "version_major": 2,
        "version_minor": 0
       },
@@ -90,7 +90,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "e317f2b6a5b844d7b4f3bca50bbe64bc",
+       "model_id": "",
        "version_major": 2,
        "version_minor": 0
       },
@@ -130,7 +130,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "28de01c961504fc6ba7d2d4ce05040a1",
+       "model_id": "",
        "version_major": 2,
        "version_minor": 0
       },
@@ -164,7 +164,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "7d89ac786ccb4a39afd5b54389166449",
+       "model_id": "",
        "version_major": 2,
        "version_minor": 0
       },
@@ -207,7 +207,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "a372f8fc817c4153b634ee6f839780f2",
+       "model_id": "",
        "version_major": 2,
        "version_minor": 0
       },
@@ -240,7 +240,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "c54cbe8042fb4e42a099873de2df38d5",
+       "model_id": "",
        "version_major": 2,
        "version_minor": 0
       },
@@ -281,7 +281,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "bd85c3dcd3b04d1d8fd28dc1ae8c1f24",
+       "model_id": "",
        "version_major": 2,
        "version_minor": 0
       },
@@ -387,7 +387,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "4a1870fbe5034d6d8e230921fb5dd7e0",
+       "model_id": "",
        "version_major": 2,
        "version_minor": 0
       },
