Code studies 10/12/2020 Python for Data Science and Machine Learning Bootcamp completed

--- a/Python/PlayPython/SQL Connection/TOU_Analysis(SQL)  .ipynb
+++ b/Python/PlayPython/SQL Connection/TOU_Analysis(SQL)  .ipynb
@@ -54,8 +54,8 @@
      "output_type": "stream",
      "text": [
       "Meter number: 20529319\n",
-      "Date From (DD-MON-YY HH:MM:SS): 23-OCT-20 23:00:00\n",
-      "Date To (DD-MON-YY HH:MM:SS): 27-OCT-20 00:00:00\n"
+      "Date From (DD-MON-YY HH:MM:SS): 23-oct-20 23:00:00\n",
+      "Date To (DD-MON-YY HH:MM:SS): 27-oct-20 00:00:00\n"
      ]
     }
    ],
@@ -479,7 +479,7 @@
        "        "
       ],
       "text/plain": [
-       "<IPython.lib.display.IFrame at 0x20c9f821860>"
+       "<IPython.lib.display.IFrame at 0x19d43b9fda0>"
       ]
      },
      "execution_count": 14,
